--- a/css/style-medium.css
+++ b/css/style-medium.css
@@ -42,37 +42,15 @@
 
 	#navButton .toggle {
 		text-decoration: none;
-		height: 100%;
+		height: 80%;
 		left: 0;
 		position: absolute;
 		top: 0;
-		width: 100%;
+		width: 50%;
+		background-image: url('hamburger-icon.png');
+		background-repeat: no-repeat;
+		background-size: 100% 100%;
 	}
-
-		#navButton .toggle:before {
-			content: "";
-			-moz-osx-font-smoothing: grayscale;
-			-webkit-font-smoothing: antialiased;
-			font-family: FontAwesome;
-			font-style: normal;
-			font-weight: normal;
-			text-transform: none !important;
-		}
-
-		#navButton .toggle:before {
-			background: rgba(144, 149, 154, 0.75);
-			border-radius: 6px;
-			color: #fff;
-			display: block;
-			font-size: 17px;
-			height: 2em;
-			left: 0.5em;
-			line-height: 2em;
-			position: absolute;
-			text-align: center;
-			top: 0.5em;
-			width: 3.5em;
-		}
 
 	#navPanel {
 		background: #192024;
