--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
-@charset "UTF-8";
+/* @charset "UTF-8";
 @import url(font-awesome.min.css);
-@import url("//fonts.googleapis.com/css?family=Roboto:500,300");
-
+@import url("//fonts.googleapis.com/css?family=Roboto:500,300"); */
 /*
 	Ion by TEMPLATED
 	templated.co @templatedco
@@ -19,10 +18,12 @@
 }
 	body, input, select, textarea {
 		color: #555f66;
-		font-family: "Roboto", Helvetica, sans-serif;
+		font-family: "Rubik", sans-serif;
+		font-optical-sizing: auto;
 		font-size: 14pt;
-		font-weight: 300;
+		font-weight: 400;
 		line-height: 1.75em;
+		font-style: normal;
 	}
 
 	a {
@@ -119,7 +120,7 @@
 		background: rgba(144, 144, 144, 0.075);
 		border-radius: 6px;
 		border: solid 1px rgba(144, 144, 144, 0.25);
-		font-family: "Courier New", monospace;
+		font-family: "Rubik", sans-serif;
 		font-size: 0.9em;
 		margin: 0 0.25em;
 		padding: 0.25em 0.65em;
@@ -127,7 +128,7 @@
 
 	pre {
 		-webkit-overflow-scrolling: touch;
-		font-family: "Courier New", monospace;
+		font-family: "Rubik", sans-serif;
 		font-size: 0.9em;
 		margin: 0 0 2em 0;
 		overflow-x: auto;
@@ -986,7 +987,12 @@
 		background-position: center center;
 		background-repeat: no-repeat;
 		color: #d8d8d8;
-		padding: 14em 0;
+		/* Adjustments below to fix banner size issue*/
+		height: 15%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		/*      */
 		text-align: center;
 		position: relative;
 	}
@@ -1089,3 +1095,12 @@
 		#footer .icons a {
 			color: #bbb;
 		}
+
+
+	.divider {
+			margin-top: 0px; /* Adjusts the space above the line */
+			margin-bottom: 0px; /* Adjusts the space below the line */
+			border: 0; /* Removes the default border */
+			height: 1px; /* Sets the thickness of the line */
+			background-color: #c1bfbf; /* Sets the color of the line */
+	  }		
